# comp-graf

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  comp_graf_project  ponteiros.txt
comp-graf-geral/Trabalho1-CG-main/: .gitignore
comp-graf-geral/Trabalho1-CG-main/.cache/clangd/index/: appearance.h.D9FD934A9EDC35EE.idx  arcball.cpp.B57551EFD9B5DEB8.idx  arcball.h.DA57515B177A6CC8.idx  camera.h.255D6A3FE57038D4.idx  camera2d.cpp.5A30ECD58E071078.idx  camera2d.h.330ADDE9F9E426D2.idx  camera3d.cpp.7586B60BC6258E4A.idx  camera3d.h.680563FE71E6BFBE.idx  color.cpp.F78D08CB5DA93160.idx  color.h.186FB1503DF949FB.idx  computeshader.cpp.5356F5F67B95D439.idx  computeshader.h.EFA126F18393156A.idx  cube.cpp.562976CD0E2ED56C.idx  cube.h.49D8A2FDE293653D.idx  disk.cpp.C5E3FF0EB37593F3.idx  disk.h.3FE043AA1F4F1257.idx  engine.h.93A0C83103B43675.idx  error.cpp.CDA0CE15B0206D96.idx  error.h.36518722AC657400.idx  framebuffer.cpp.F8D5484CD91F4AA7.idx  framebuffer.h.848D56CC45D03AAD.idx  glad.c.D8C45D6E3BDAD46E.idx  glad.h.460435076371D3F6.idx  grid.cpp.5A87068C890B07EF.idx  grid.h.E6AD13FD8FCDEA4C.idx  image.cpp.467FCAF0DC6E5E21.idx  image.h.CE2975EA26B59159.idx  khrplatform.h.475A1C585A28D722.idx  light.cpp.E4FD8CC830EE7686.idx  light.h.5D1E2C8F0B78297B.idx  main_2d.cpp.2BB77345EB184328.idx  main_3d.cpp.893A2D88373040C4.idx  (+33 more)
comp-graf-geral/Trabalho1-CG-main/src/: main_2d.cpp  quad.cpp
comp-graf-geral/comp-graf/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  comp_graf_project  old_CMakeLists.txt
comp-graf-geral/comp-graf/include/: circle.h
comp-graf-geral/comp-graf/shaders/ilum_vert/: fragment.glsl  fragment_texture.glsl  vertex.glsl  vertex_texture.glsl
comp-graf-geral/comp-graf/src/: camera3d.cpp  circle.cpp  cube.cpp  disk.h  framebuffer.cpp  light.cpp  line.cpp  main_2d.cpp  main_3d.cpp  mesh.cpp  polygon.cpp  polygon.h  polyoffset.cpp  quad.cpp  shader.cpp  sphere.cpp  state.cpp  texbuffer.cpp  texdepth.cpp  texture.cpp
comp-graf-geral/old/: Comandos para comp graf.txt
comp-graf-geral/old/tarefa_0/: Relatório 0 - Bento Bruno.odt  teste
comp-graf-geral/old/tarefa_1/triangle/: error.cpp  main  shader.cpp  triangle.cpp
comp-graf-geral/relatorios/: Comp Graf Relatorio 1.odt  Comp Graf Relatorio 2.odt
shaders/: vertex.glsl
src/: camera2d.cpp  circle.cpp  circle.h  disk.cpp  error.cpp  image.cpp  line.cpp  line.h  main.cpp  main_2d.cpp  main_3d.cpp  polygon.cpp  polygon.h  shader.cpp  teste.cpp  texcube.cpp  triangle.cpp
src/shaders/: fragment.glsl
tarefa_0/: glfw_example  test0-glfw.cpp
tarefa_1/: CMakeLists.txt
tarefa_1/triangle/: main.cpp
(+1 files in other folders)
